# ft-api

./: .gitignore  API_Structure_Relationships.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
libft-api/: Cargo.toml  LICENSE  README.md
libft-api-derive/: Cargo.toml
libft-api-derive/src/: lib.rs
libft-api/examples/: scroll.rs
libft-api/src/: api.rs  auth.rs  common.rs  connector.rs  info.rs  lib.rs  main.rs  models.rs  prelude.rs
libft-api/src/api/: campus.rs  campus_id_users.rs  cursus.rs  exam.rs  group.rs  prelude.rs  project.rs  project_session.rs  project_user.rs  scale_team.rs  user.rs  users_id_correction_point_historics.rs  users_id_locations_stats.rs
libft-api/src/api/campus/: campus.rs  campus_id.rs  campus_id_journals.rs  campus_id_locations.rs  campus_id_users.rs  campus_users.rs
libft-api/src/api/cursus/: cursus_id_projects.rs
libft-api/src/api/exam/: exams.rs
libft-api/src/api/group/: groups.rs
libft-api/src/api/project/: project_data.rs  projects.rs  projects_id_teams.rs
libft-api/src/api/project_session/: project_sessions_id_scale_teams.rs  project_sessions_id_teams.rs
libft-api/src/api/project_user/: projects_users.rs
libft-api/src/api/scale_team/: scale_teams.rs
libft-api/src/api/user/: campus_users.rs  users.rs  users_id.rs  users_id_correction_point_historics.rs  users_id_correction_points_add.rs  users_id_cursus_users.rs  users_id_locations.rs  users_id_locations_stats.rs  users_id_projects_users.rs  users_id_teams.rs
libft-api/src/common/: client.rs  error.rs  paginator.rs  param.rs  ratelimiter.rs
libft-api/src/models/: achievement.rs  campus.rs  campus_user.rs  correction_point_history.rs  cursus_user.rs  datetime.rs  exam.rs  feedback.rs  flag.rs  group.rs  image.rs  journals.rs  language.rs  locations.rs  prelude.rs  project.rs  project_data.rs  project_session.rs  projects_users.rs  role.rs  scale.rs  scale_teams.rs  team.rs  title.rs  user.rs
src/: api.rs  auth.rs  common.rs  connector.rs  info.rs  lib.rs  main.rs  models.rs
src/api/: campus_id_locations.rs  cursus_id_projects.rs  locations.rs  mod.rs  project_data.rs  project_sessions_id_scale_teams.rs  project_sessions_id_teams.rs  projects.rs  projects_id_teams.rs  users.rs  users_id_correction_point_historics.rs  users_id_teams.rs
src/auth/: mod.rs
src/axum_support/: mod.rs
src/common/: client.rs  error.rs  mod.rs  param.rs
src/models/: campus.rs  feedback.rs  flag.rs  image.rs  language.rs  locations.rs  mod.rs  project.rs  project_session.rs  projects_users.rs  scale.rs  scale_teams.rs  team.rs  user.rs
