[package]
name = "ft_api"
version = "0.1.0"
edition = "2021"

[dependencies]
util = { path = "../util"}
serde = { version = "1.0.198", features = ["derive"] }
serde_with = {version = "3.7.0", features = ["macros"] }
serde_json = { version = "1.0.116", features = ["std"] }
reqwest = { version = "0.12.4" , features = ["json"] }
rvstruct = "0.3.2"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
chrono = { version = "0.4.38" , features = ["serde"] }
rsb_derive = "0.5.1"
url = { version = "2.5", features = ["serde"] }
futures = "0.3"
lazy_static = "1.4.0"
mime = "0.3.17"
console-subscriber = "0.2.0"
