[package]
name = "ft-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
serde_with = { version = "3.8.1", features = ["macros"] }
serde_json = { version = "1.0.117", features = ["std"] }
serde_plain = "1.0.2"
reqwest = { version = "0.12.4", features = ["json"] }
rvstruct = "0.3.2"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
rsb_derive = "0.5.1"
url = { version = "2.5", features = ["serde"] }
futures = { version = "0.3", features = ["alloc"] }
lazy_static = "1.4.0"
mime = "0.3.17"
console-subscriber = "0.2.0"
tracing = "0.1.40"

