[workspace]
members = [
    "libft-api", "libft-api-derive",
]
resolver = "2"

[patch.crates-io]
libft-api = { path = "libft-api" }

[workspace.dependencies]
proc-macro2 = { version = "1.0.86", default-features = false }
quote = { version = "1.0.37", default-features = false }
syn = { version = "2.0.77", default-features = false }
