[package]
name = "libft-api-derive"
version = "0.2.0"
edition = "2021"
description = "Procedural macros for the `libft-api` crate."
license-file = "LICENSE"
keywords = ["42", "http"]
categories = ["development-tools::procedural-macro-helpers"]
repository = "https://github.com/hdoo42/libft-api"

[badges]
maintenance = { status = "actively-developed" }


[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.106", features = ["full"]}
quote = "1.0.41"
proc-macro2 = "1.0.101"
