[package]
name = "libft-api"
version = "0.1.0"
edition = "2021"
authors  = ["hdoo42 <tyeirdoo06@gmail.com>"]
description="42api library for rust"
readme="READEME.md"
exclude = ["src/main.rs"]

[lib]
path="src/lib.rs"

[[bin]]
name="project_stats"
path="bin/project_stats.rs"

[[bin]]
name="locations"
path="bin/locations.rs"

[[bin]]
name="blackholed"
path="bin/blackholed.rs"

[[bin]]
name="journals"
path="bin/journals.rs"

[[bin]]
name="campus_users"
path="bin/campus_users.rs"

[[bin]]
name="user_creation"
path="bin/user_creation.rs"

[[bin]]
name="evaluation"
path="bin/evaluation.rs"

[[bin]]
name="user_subscribe"
path="bin/user_subscribe.rs"

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_with = { version = "3.11.0", features = ["macros"] }
serde_json = { version = "1.0.133", features = ["std"] }
serde_plain = "1.0.2"
reqwest = { version = "0.12.9", features = ["json"] }
rvstruct = "0.3.2"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
chrono = { version = "0.4.39", features = ["serde"] }
rsb_derive = "0.5.1"
url = { version = "2.5.4", features = ["serde"] }
futures = { version = "0.3.31", features = ["alloc"] }
lazy_static = "1.5.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
